force-app/main/default/objects/Script_Document__c/Script_Document__c.object-meta.xml
<CustomObject>
    <description>Stores the current editable content and formatting metadata for a script.</description>
    <label>Script Document</label>
    <nameField>
        <displayFormat>DOC-{000000}</displayFormat>
        <label>Document Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Script Documents</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>