force-app/main/default/objects/Script_Document__c/fields/Content_Document_Id__c.field-meta.xml
<CustomField>
    <fullName>Content_Document_Id__c</fullName>
    <description
  >Salesforce ContentDocument Id for the working script JSON file.</description>
    <label>Content Document Id</label>
    <length>18</length>
    <type>Text</type>
</CustomField>