force-app/main/default/objects/Script_Document__c/fields/Format_Metadata__c.field-meta.xml
<CustomField>
    <fullName>Format_Metadata__c</fullName>
    <description>Serialized block types and formatting data used by the script editor.</description>
    <label>Format Metadata</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>