force-app/main/default/objects/Script_Document__c/fields/Storage_Mode__c.field-meta.xml
<CustomField>
    <fullName>Storage_Mode__c</fullName>
    <description
  >Whether the working script body is stored in a Long Text Area or a Salesforce File.</description>
    <label>Storage Mode</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Legacy</fullName>
                <default>true</default>
                <label>Legacy</label>
            </value>
            <value>
                <fullName>File</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>