force-app/main/default/objects/Script_Document__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Script__c</columns>
    <columns>Word_Count__c</columns>
    <columns>Page_Count__c</columns>
    <filterScope>Everything</filterScope>
    <label>All Script Documents</label>
</ListView>